--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.4.0",
 		"axios": "^1.4.0",
 		"bootstrap": "^4.6.2",
 		"bootstrap-vue": "^2.23.1",
 		"core-js": "^3.8.3",
 		"jwt-decode": "^3.1.2",
+		"swiper": "^5.3.7",
 		"vue": "^2.7.14",
+		"vue-awesome-swiper": "^4.1.1",
+		"vue-carousel": "^0.18.0",
 		"vue-router": "^3.5.1",
+		"vue-slick": "^1.2.0",
+		"vue-slick-carousel": "^1.0.6",
 		"vuex": "^3.6.2",
 		"vuex-persistedstate": "^4.1.0"
 	},
