--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"vue-router": "^3.5.1",
 		"vue-slick": "^1.2.0",
 		"vue-slick-carousel": "^1.0.6",
+		"vue-video-background": "^0.1.2",
 		"vuex": "^3.6.2",
 		"vuex-persistedstate": "^4.1.0"
 	},
